--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.3.6",
     "@nuxtjs/pwa": "^3.0.0-0",
+    "moment": "^2.27.0",
     "nuxt": "^2.0.0",
     "nuxt-sass-resources-loader": "^2.0.5"
   },
