add slides from last event

--- a/assets/json/presentations/Vue 3/2020/Will Vue 3 bring the end of Renderless components.json
+++ b/assets/json/presentations/Vue 3/2020/Will Vue 3 bring the end of Renderless components.json
@@ -1,5 +1,5 @@
 {
-  "slides": null,
+  "slides": "https://slides.com/sreiss/renderless-components-in-vue3",
   "author": "Stéphane Reiss",
   "sourceLanguage": "English",
   "city": "Montreal",
