--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.13.1",
-    "@nuxtjs/pwa": "^3.0.0-0",
+    "@nuxtjs/pwa": "^3.3.5",
     "moment": "^2.29.1",
     "nuxt": "^2.0.0",
     "nuxt-sass-resources-loader": "^2.0.5"
